update: 更新swagger接口文档
