# app/Http/Controllers/Wechat/MiniProgramController.php
@@ -38,6 +38,29 @@ use Illuminate\Http\Request;
  *         ),
  *     ),
  *     @SWG\Definition(
+ *         definition="CommonError",
+ *         type="object",
+ *         @SWG\Property(
+ *             property="code",
+ *             description="返回码，大于等于0",
+ *             type="integer",
+ *             format="int32",
+ *             example="2001",
+ *         ),
+ *         @SWG\Property(
+ *             property="error",
+ *             description="错误消息提示",
+ *             type="string",
+ *             example="只能操作您自己创建的policy",
+ *         ),
+ *         @SWG\Property(
+ *             property="result",
+ *             description="结果(false)",
+ *             type="boolean",
+ *             default=false,
+ *         ),
+ *     ),
+ *     @SWG\Definition(
  *         definition="ValidationError",
  *         type="object",
  *         @SWG\Property(
