# storage/api-docs/api-docs.json
@@ -8,7 +8,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "wxgame-api.max78.com",
+    "host": "local.virtual-life.com",
     "basePath": "/wechat",
     "schemes": [
         "http"
@@ -162,6 +162,346 @@
                     }
                 }
             }
+        },
+        "/stock/dividend-policy": {
+            "get": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u83b7\u53d6\u80a1\u7968\u5206\u7ea2\u65b9\u6848",
+                "operationId": "stock.dividend-policy.get",
+                "responses": {
+                    "200": {
+                        "description": "\u8fd4\u56de\u6240\u6709\u80a1\u7968\u5206\u7ea2\u65b9\u6848",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "allOf": [
+                                    {
+                                        "$ref": "#/definitions/StockDividendPolicy"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u6dfb\u52a0\u80a1\u7968\u5206\u7ea2\u65b9\u6848",
+                "operationId": "stock.dividend-policy.add",
+                "parameters": [
+                    {
+                        "name": "policy",
+                        "in": "query",
+                        "description": "\u5206\u7ea2\u65b9\u6848\u540d\u79f0",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6dfb\u52a0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "422": {
+                        "description": "\u8bf7\u6c42\u53c2\u6570\u9a8c\u8bc1\u5931\u8d25",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u5220\u9664\u80a1\u7968\u5206\u7ea2\u65b9\u6848",
+                "operationId": "stock.dividend-policy.del",
+                "parameters": [
+                    {
+                        "name": "policy_id",
+                        "in": "query",
+                        "description": "\u5206\u7ea2\u65b9\u6848id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u5220\u9664\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "400": {
+                        "description": "\u901a\u7528\u9519\u8bef",
+                        "schema": {
+                            "$ref": "#/definitions/CommonError"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/ipo": {
+            "get": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u83b7\u53d6\u80a1\u7968ipo\u4fe1\u606f",
+                "operationId": "stock.ipo.get",
+                "responses": {
+                    "200": {
+                        "description": "\u8fd4\u56de\u6307\u5b9a\u80a1\u7968\u6216\u5168\u90e8ipo\u4fe1\u606f",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "allOf": [
+                                    {
+                                        "$ref": "#/definitions/StockIpo"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u80a1\u7968ipo",
+                "operationId": "stock.ipo.add",
+                "parameters": [
+                    {
+                        "name": "stock_code",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u4ee3\u7801",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "stock_type_id",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u7c7b\u578bid",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "ipo_price",
+                        "in": "query",
+                        "description": "ipo\u4ef7\u683c",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "ipo_shares",
+                        "in": "query",
+                        "description": "ipo\u80a1\u7968\u6570\u91cf",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "dividend_policy_id",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u5206\u7ea2id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "intro",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u7b80\u4ecb",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ipo\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "400": {
+                        "description": "\u901a\u7528\u9519\u8bef",
+                        "schema": {
+                            "$ref": "#/definitions/CommonError"
+                        }
+                    },
+                    "422": {
+                        "description": "\u8bf7\u6c42\u53c2\u6570\u9a8c\u8bc1\u5931\u8d25",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationError"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/ipo/subscription": {
+            "post": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u80a1\u7968\u8ba4\u8d2d",
+                "operationId": "stock.ipo.subscription.add",
+                "parameters": [
+                    {
+                        "name": "stock_code",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u4ee3\u7801",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "subscribe_shares",
+                        "in": "query",
+                        "description": "\u8ba4\u8d2d\u6570\u91cf",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u8ba4\u8d2d\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "400": {
+                        "description": "\u901a\u7528\u9519\u8bef",
+                        "schema": {
+                            "$ref": "#/definitions/CommonError"
+                        }
+                    },
+                    "422": {
+                        "description": "\u8bf7\u6c42\u53c2\u6570\u9a8c\u8bc1\u5931\u8d25",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationError"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/order": {
+            "post": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u4e0b\u5355",
+                "operationId": "stock.order.add",
+                "parameters": [
+                    {
+                        "name": "direction",
+                        "in": "query",
+                        "description": "\u4e0b\u5355\u65b9\u5411\uff08buy or sell\uff09",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "stock_code",
+                        "in": "query",
+                        "description": "\u80a1\u7968\u4ee3\u7801",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "price",
+                        "in": "query",
+                        "description": "\u4e0b\u5355\u4ef7\u683c",
+                        "required": true,
+                        "type": "number"
+                    },
+                    {
+                        "name": "shares",
+                        "in": "query",
+                        "description": "\u4e0b\u5355\u6570\u91cf",
+                        "required": true,
+                        "type": "number"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u4e0b\u5355\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "400": {
+                        "description": "\u901a\u7528\u9519\u8bef",
+                        "schema": {
+                            "$ref": "#/definitions/CommonError"
+                        }
+                    },
+                    "422": {
+                        "description": "\u8bf7\u6c42\u53c2\u6570\u9a8c\u8bc1\u5931\u8d25",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationError"
+                        }
+                    }
+                }
+            }
+        },
+        "/stock/type": {
+            "get": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u83b7\u53d6\u6240\u6709\u80a1\u7968\u5206\u7c7b\u7c7b\u578b",
+                "operationId": "stock.type.get",
+                "responses": {
+                    "200": {
+                        "description": "\u8fd4\u56de\u6240\u6709\u80a1\u7968\u5206\u7c7b\u7c7b\u578b",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "allOf": [
+                                    {
+                                        "$ref": "#/definitions/StockType"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "stock"
+                ],
+                "description": "\u6dfb\u52a0\u80a1\u7968\u7c7b\u578b",
+                "operationId": "stock.type.add",
+                "parameters": [
+                    {
+                        "name": "type_name",
+                        "in": "query",
+                        "description": "\u7c7b\u578b\u540d\u79f0",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "\u6dfb\u52a0\u6210\u529f",
+                        "schema": {
+                            "$ref": "#/definitions/Success"
+                        }
+                    },
+                    "422": {
+                        "description": "\u8bf7\u6c42\u53c2\u6570\u9a8c\u8bc1\u5931\u8d25",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -177,6 +517,27 @@
                     "description": "\u6d88\u606f",
                     "type": "string",
                     "example": "\u64cd\u4f5c\u6210\u529f"
+                }
+            },
+            "type": "object"
+        },
+        "CommonError": {
+            "properties": {
+                "code": {
+                    "description": "\u8fd4\u56de\u7801\uff0c\u5927\u4e8e\u7b49\u4e8e0",
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "2001"
+                },
+                "error": {
+                    "description": "\u9519\u8bef\u6d88\u606f\u63d0\u793a",
+                    "type": "string",
+                    "example": "\u53ea\u80fd\u64cd\u4f5c\u60a8\u81ea\u5df1\u521b\u5efa\u7684policy"
+                },
+                "result": {
+                    "description": "\u7ed3\u679c(false)",
+                    "type": "boolean",
+                    "default": false
                 }
             },
             "type": "object"
@@ -315,6 +676,31 @@
                 }
             ]
         },
+        "StockDividendPolicy": {
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "policy": {
+                    "description": "\u5206\u4f1a\u65b9\u6848\u540d\u79f0",
+                    "type": "string",
+                    "example": "\u5b9a\u671f\u8eab\u4ef7\u5206\u7ea2"
+                },
+                "player_id": {
+                    "description": "\u521b\u5efa\u8005\u73a9\u5bb6id",
+                    "type": "integer",
+                    "example": "10000"
+                }
+            },
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/CreatedAtUpdatedAt"
+                }
+            ]
+        },
         "StockHolder": {
             "properties": {
                 "id": {
@@ -347,6 +733,99 @@
                     "description": "\u53ef\u7528\u80a1\u7968\u6570",
                     "type": "string",
                     "example": "2.00000000"
+                }
+            },
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/CreatedAtUpdatedAt"
+                }
+            ]
+        },
+        "StockIpo": {
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "stock_code": {
+                    "description": "\u80a1\u7968\u4ee3\u7801",
+                    "type": "string",
+                    "example": "ABC12345"
+                },
+                "stock_type_id": {
+                    "description": "\u80a1\u7968\u7c7b\u578bid",
+                    "type": "integer",
+                    "example": "1"
+                },
+                "issuer_id": {
+                    "description": "\u53d1\u884c\u4ebaid",
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "10000"
+                },
+                "ipo_price": {
+                    "description": "ipo\u4ef7\u683c",
+                    "type": "number",
+                    "example": "1.1"
+                },
+                "ipo_shares": {
+                    "description": "ipo\u80a1\u7968\u6570\u91cf",
+                    "type": "number",
+                    "example": "70"
+                },
+                "ipo_remained_shares": {
+                    "description": "\u5269\u4f59ipo\u80a1\u7968\u5f85\u8ba4\u8d2d\u6570",
+                    "type": "number",
+                    "example": "50"
+                },
+                "dividend_policy_id": {
+                    "description": "\u80a1\u7968\u5206\u7ea2\u65b9\u6848id",
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "intro": {
+                    "description": "\u80a1\u7968\u7b80\u4ecb",
+                    "type": "string",
+                    "example": "\u6211\u7684\u80a1\u7968\u7b80\u4ecb"
+                },
+                "status": {
+                    "description": "ipo\u72b6\u6001",
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "ipo_subscribed_shares": {
+                    "description": "ipo\u5df2\u8ba4\u8d2d\u80a1\u7968\u6570",
+                    "type": "number",
+                    "example": "20"
+                }
+            },
+            "type": "object",
+            "allOf": [
+                {
+                    "$ref": "#/definitions/CreatedAtUpdatedAt"
+                }
+            ]
+        },
+        "StockType": {
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "1"
+                },
+                "type_name": {
+                    "description": "\u7c7b\u578b\u540d\u79f0",
+                    "type": "string",
+                    "example": "\u97f3\u4e50"
+                },
+                "creator_id": {
+                    "description": "\u521b\u5efa\u8005\u73a9\u5bb6id",
+                    "type": "integer",
+                    "example": "10000"
                 }
             },
             "type": "object",
